--- a/styles/style.css
+++ b/styles/style.css
@@ -1,1 +1,349 @@
-/* место для вашего кода */
+/* Общие */
+
+.body {
+  max-width: 1440px;
+  margin: auto;
+  justify-content: center;
+}
+
+a {
+  color: #000;
+  font-family: Raleway, sans-serif;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  text-decoration: underline;
+  text-decoration-thickness: 1px;
+  text-underline-offset: 4px;
+}
+
+/* ------------------------ Шапка ------------------------ */
+
+.header {
+  display: grid;
+  grid-template-columns: 2fr auto 2fr;
+  padding: 92px 50px 96px;
+  align-items: center;
+}
+
+.header_menu {
+  max-width: 391px;
+  padding:  44px 0px 39px 0px;
+}
+
+.header__links-list {
+  display: flex;
+  gap: 32px;
+  letter-spacing: 0.1px;
+}
+
+.header__links-list-item_no-bullit {
+  list-style-type: none;
+}
+
+.header__links-list-item {
+  list-style-type: circle;
+  justify-self: center;
+}
+
+.header__link {
+  font-weight: 400px;
+  font-size: 18px;
+  line-height: normal;
+}
+
+.header__link_active {
+  text-decoration: none;
+}
+
+.header__logo {
+  max-height: 105px;
+  justify-self: center;
+}
+
+.header__logo-image {
+  width: 148px;
+  height: 105px;
+  justify-self: center;
+}
+
+.address {
+  max-height: 98px;
+  max-width: 240px;
+  justify-self: end;
+  font-size: 18px;
+  letter-spacing: 1%;
+  line-height: 24.3px;
+  font-style: normal; 
+  text-decoration-thickness: 1px;
+}
+
+/* ------------------------ Картинка ------------------------ */
+    
+.cover{
+  position: relative;
+  background-image: url("../images/cover.jpg");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  height: 757px;
+  left: 0px;
+}
+
+.overlay {
+  position: absolute;
+  background: rgba(0, 0, 0, 0.6);
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+    
+.cover__title {
+  display: flex;
+  position: relative;
+  flex-direction: column;
+  gap: 20px;
+  padding: 166px 50px 135px;
+  color: white;
+  font-weight: 700;
+  font-size: 100px;
+  text-transform: uppercase;
+  letter-spacing: 30px;
+  text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+}
+
+.aligned-text {
+  display: flex;
+  align-self: start;
+  line-height: 115%;
+}
+
+.aligned-text_center{
+  display: flex;
+  align-self: center;
+  line-height: 100%;
+}
+
+.aligned-text_right {
+  display: flex;
+  align-self: end;
+  line-height: 100%;
+}
+
+.letter-spacing-extended {
+  letter-spacing: 60px;
+}
+
+.no-letter-spacing{
+  letter-spacing: 0px; 
+}
+
+.cover__description {
+  display: flex;
+  position: relative;
+  justify-content: flex-end;
+  gap: 78px;
+  padding: 0 50px 50px;
+}
+
+.cover__description-text {
+  
+  font-weight: 400;
+  font-size: 22px;
+  line-height: 28px;
+  text-transform: uppercase;
+  color: #FFFFFF;
+  word-spacing: 18px;
+  align-content: center; 
+}
+
+.bet-button {
+  font-family: "Raleway", sans-serif;
+  font-weight: 400;
+  font-size: 22px;
+  text-transform: uppercase;
+  border: 1px solid #fff;
+  padding: 12px 32px;
+  background: 0;
+  color: #fff;
+}
+
+/* ------------------------  Лоты ------------------------  */
+
+.lots {
+    
+  position: relative;
+  padding: 179px 25px 25px 25px;
+}
+
+.lots__heading {
+  font-weight: 700;
+  font-size: 40px;
+  padding-left: 40px;
+  padding-bottom: 27px;
+  text-transform: uppercase;
+}
+
+.lots__card-list {
+  display: flex;
+  gap: 25px;
+  margin-bottom: 30px;
+  list-style: none;
+}
+  
+.lots__card-list-item {
+  width: 330px;
+   min-height: 560px;
+  flex-grow: 1;
+}
+  
+.lots__look-more-link {
+  padding: 0px 0px 3px;
+  margin-left: 40px;
+  font-weight: 400;
+  font-size: 20px;
+  line-height: normal;
+  text-decoration-thickness: 1px;
+}
+  
+.card-link {
+  display: block;
+  height: 100%;
+  width: 100%;
+  text-decoration: none;
+}
+  
+.card {
+  position: relative;
+  z-index: 1;
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  height: 100%;
+  padding: 50px 40px;
+  color: #fff;
+}
+  
+.card_type_film,
+.card_type_book,
+.card_type_picture {
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+}
+  
+.card_type_film {
+  background-image: url("../images/card-lot-01.jpg");
+}
+  
+.card_type_book {
+  background-image: url("../images/card-lot-02.jpg");
+}
+  
+.card_type_picture {
+  background-image: url("../images/card-lot-03.jpg");
+}
+  
+.card__title {
+  display: flex;
+  position: relative;
+  font-weight: 700;
+  font-size: 22px;
+  line-height: 120%;
+  text-decoration: underline;
+  text-transform: uppercase;
+  text-decoration-thickness: 1px;
+}
+  
+.card__text {
+  display: flex;
+  position: relative;
+  margin-top: auto;
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 120%;
+}
+
+/* ------------------------ О нас ------------------------ */
+
+.about {
+  display: grid;
+  grid-template-columns: min-content 1fr;
+  padding: 155px 72px 0px;
+  column-gap: 72px;
+}
+
+.about__column {
+  justify-self: center;
+  width: 689px;
+}
+
+  .about__logo {
+  display: flex;
+  width: 240px;
+  height: 240px;
+  border-radius: 50%;
+  background: #000;
+}
+
+  .about__logo-image {
+  margin: auto;
+  justify-self: center;
+}
+
+.about__title {
+  font-weight: 700;
+  font-size: 40px;
+  padding: 100px 0 100px;
+  text-transform: uppercase;
+}
+
+.about__text {
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 24px;
+  padding-bottom: 24px;
+  letter-spacing: 101%;
+}
+  
+/* ------------------------ Подвал ------------------------ */
+
+.footer {
+  display: flex;
+  justify-content: space-between;
+  padding: 155px 50px 90px;
+  }
+  
+.footer__menu-list {
+  text-align: center;
+  list-style: none;
+}
+  
+.footer__menu-link {
+  font-weight: 400;
+  font-size: 18px;
+  line-height: normal;
+  text-underline-offset: 2px;
+}
+  
+.footer__menu-link_active {
+  text-decoration: none;
+}
+
+.footer__social-list {
+  display: flex;
+  flex-wrap: wrap;
+  justify-self: end;
+  align-items: top;
+  gap: 20px 48px;
+  max-width: 240px;
+  list-style: none;
+}
+
+.footer__social-link {
+  display: block;
+  width: 48px;
+  height: 48px;   
+}
