--- a/fonts/fonts.css
+++ b/fonts/fonts.css
@@ -1,4 +1,3 @@
-/* 
 @font-face {
   font-family: Raleway;
   src:
@@ -15,4 +14,4 @@
     url(./Raleway-Bold.woff) format('woff');
   font-weight: bold;
   font-display: swap;
-} */
+} 
