--- a/styles/style.css
+++ b/styles/style.css
@@ -1,7 +1,7 @@
 /* Общие */
 
 .body {
-  max-width: 1440px;
+  max-width: 1100px;
   margin: auto;
   justify-content: center;
 }
@@ -69,6 +69,7 @@ a {
 }
 
 .address {
+  font-style: normal;
   max-height: 98px;
   max-width: 240px;
   justify-self: end;
@@ -86,8 +87,7 @@ a {
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
-  height: 757px;
-  left: 0px;
+  min-height: 757px;
 }
 
 .overlay {
@@ -187,6 +187,7 @@ a {
 
 .lots__card-list {
   display: flex;
+  flex-wrap:wrap;
   gap: 25px;
   margin-bottom: 30px;
   list-style: none;
@@ -216,6 +217,7 @@ a {
   
 .card {
   position: relative;
+  justify-content: space-between;
   z-index: 1;
   display: flex;
   flex-direction: column;
@@ -223,11 +225,6 @@ a {
   height: 100%;
   padding: 50px 40px;
   color: #fff;
-}
-  
-.card_type_film,
-.card_type_book,
-.card_type_picture {
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
@@ -259,7 +256,6 @@ a {
 .card__text {
   display: flex;
   position: relative;
-  margin-top: auto;
   font-weight: 400;
   font-size: 20px;
   line-height: 120%;
@@ -276,10 +272,11 @@ a {
 
 .about__column {
   justify-self: center;
-  width: 689px;
+  width: 100%;
+  max-width: 689px; 
 }
 
-  .about__logo {
+.about__logo {
   display: flex;
   width: 240px;
   height: 240px;
@@ -287,7 +284,7 @@ a {
   background: #000;
 }
 
-  .about__logo-image {
+.about__logo-image {
   margin: auto;
   justify-self: center;
 }
@@ -342,6 +339,11 @@ a {
 
 .footer__social-link {
   display: block;
+  width: 48px;
+  height: 48px;
+}
+
+.footer__social-icon {
   width: 48px;
   height: 48px;
 }
